# cv-cli

./: .gitignore  README.md  cli.py  flake.nix  hello.py  pyproject.toml  video_proc.py
notebooks/: retrain_yolo.ipynb
runs/detect/train/: args.yaml  results.csv
src/cv_cli/: __init__.py  video_proc.py
