[project]
name = "cv-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.78",
]

[project.scripts]
cli = "cv_cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "python-dotenv>=1.0.1",
    "roboflow>=1.1.54",
]
